--- a/Ishihara/Base.lproj/Main.storyboard
+++ b/Ishihara/Base.lproj/Main.storyboard
@@ -47,6 +47,17 @@
                                     <rect key="frame" x="87" y="390" width="240" height="58"/>
                                 </variation>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ghe-tS-tm6">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Answer"/>
+                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="22" y="608" width="371" height="50"/>
+                                </variation>
+                                <connections>
+                                    <action selector="answerButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="m9i-iy-DqL"/>
+                                </connections>
+                            </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Number only" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aBC-AP-Qkt">
                                 <rect key="frame" x="-25" y="-30" width="97" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -55,14 +66,6 @@
                                     <rect key="frame" x="117" y="478" width="180" height="30"/>
                                 </variation>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ghe-tS-tm6">
-                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Answer"/>
-                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="22" y="608" width="371" height="50"/>
-                                </variation>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <variation key="default">
@@ -71,8 +74,8 @@
                                 <exclude reference="ico-ki-p8a"/>
                                 <exclude reference="X1S-ab-8EA"/>
                                 <exclude reference="v3t-AV-Ny3"/>
-                                <exclude reference="aBC-AP-Qkt"/>
                                 <exclude reference="ghe-tS-tm6"/>
+                                <exclude reference="aBC-AP-Qkt"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
@@ -81,16 +84,20 @@
                                 <include reference="ico-ki-p8a"/>
                                 <include reference="X1S-ab-8EA"/>
                                 <include reference="v3t-AV-Ny3"/>
-                                <include reference="aBC-AP-Qkt"/>
                                 <include reference="ghe-tS-tm6"/>
+                                <include reference="aBC-AP-Qkt"/>
                             </mask>
                         </variation>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
+                    <connections>
+                        <outlet property="answerTextField" destination="aBC-AP-Qkt" id="XOF-6v-zMF"/>
+                        <outlet property="ishiharaImageView" destination="X1S-ab-8EA" id="6OB-ny-g4c"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="300" y="641.25"/>
+            <point key="canvasLocation" x="96" y="591"/>
         </scene>
     </scenes>
     <resources>
